--- a/frontend/src/components/singlePage.module.css
+++ b/frontend/src/components/singlePage.module.css
@@ -8,6 +8,7 @@
         font-weight: 700;
         line-height: 50px;
         padding: 10px 0;
+        font-family: 'Droid Serif',serif;
 }
 .sub_heading{
     color: #6b6b6b;
@@ -124,7 +125,8 @@ input{
     -ms-border-radius:5px;
     -o-border-radius:5px;
     height:25px;
-    color: black;
+    color: blue;
+
 }
 .inputsubmit{
     user-select: none;
@@ -136,4 +138,38 @@ input{
     font-size: 20px;
     font-weight: bold;
     margin-left: 10px; 
+}
+.socialdivf{
+    width: 90px;
+    height: 50px;
+    background-color:#3b5999;
+    text-align: center;
+    margin-right: 10px;
+}
+.socialdivt {
+    width: 90px;
+    height: 50px;
+    background-color: #55ACEF;
+    text-align: center;
+    margin-right: 10px;
+    justify-content: center;
+    padding: 1px 0;
+}
+.socialdivt {
+    width: 45px;
+    height: 40px;
+    background-color: #55ACEF;
+    text-align: center;
+    margin-right: 10px;
+    justify-content: center;
+    padding-top: 10px;
+}
+.socialdivr {
+    width: 45px;
+    height: 40px;
+    background-color: #ff4500;
+    text-align: center;
+    /* margin-right: 10px; */
+    justify-content: center;
+    padding-top: 10px;
 }
